# sara_moveit

./: .setup_assistant  CMakeLists.txt  README.md  package.xml
config/: controller_list.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  sara.srdf  sensors_3d.yaml  sensors_list.yaml
include/sara_moveit/: PickAndPlace.h  move_arm_server.h  move_server.h
launch/: chomp_planning_pipeline.launch.xml  demo.launch  demo_gazebo.launch  gazebo.launch  move_arm_server.launch  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sara_moveit_controller_manager.launch.xml  sara_moveit_sensor_manager.launch.xml  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
src/: PickAndPlace.cpp  move_arm_server.cpp  move_server.cpp
srv/: move.srv  pick_pose.srv
